Fix word breaking and wrapping, display newlines in text.

--- a/src/app/styles/resume-element.css
+++ b/src/app/styles/resume-element.css
@@ -17,7 +17,10 @@
 .resume-element {
   outline: 1px solid #aaa;
   position: absolute;
+  text-wrap: "wrap";
   user-select: none;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 
 .selected {
